Uploading files for revised website

--- a/benswebpage.css
+++ b/benswebpage.css
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin
 hr{border:0;border-top:3px solid #000;margin:20px 12;width: 50%}
 
 .aggie-background-pic{background-image:url("pawel-czerwinski-BP2RioglKXk-unsplash.jpg");background-size:cover}
-.aggie-pic{width:100%;height:auto}
+.aggie-pic{width:100%;height:auto;width:100%;outline:solid}
 .aggie-text{margin-left:15%;margin-right:15%}
 .aggie-justify{text-align:justify;text-justify:inter-word}
 .aggie-nospace{margin:0;padding:0;border:0}
